test/corpus/literals.txt
================================================================================
String literal
================================================================================
"hello"
--------------------------------------------------------------------------------
(source_file
  (string))

================================================================================
Date literal
================================================================================
2023-01-15
--------------------------------------------------------------------------------
(source_file
  (date))

================================================================================
Integer literal
================================================================================
42
--------------------------------------------------------------------------------
(source_file
  (integer))

================================================================================
Decimal literal
================================================================================
3.14
--------------------------------------------------------------------------------
(source_file
  (decimal))

================================================================================
Boolean TRUE
================================================================================
TRUE
--------------------------------------------------------------------------------
(source_file
  (boolean))

================================================================================
Boolean FALSE
================================================================================
FALSE
--------------------------------------------------------------------------------
(source_file
  (boolean))

================================================================================
Null literal
================================================================================
NULL
--------------------------------------------------------------------------------
(source_file
  (null))
