test/corpus/operators.txt
================================================================================
Column reference
================================================================================
account
--------------------------------------------------------------------------------
(source_file
  (identifier))

================================================================================
Equality comparison
================================================================================
account = "Assets:Cash"
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (string)))

================================================================================
Inequality comparison
================================================================================
account != "Assets:Cash"
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (string)))

================================================================================
Less than comparison
================================================================================
amount < 100
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (integer)))

================================================================================
Less than or equal comparison
================================================================================
amount <= 100
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (integer)))

================================================================================
Greater than comparison
================================================================================
amount > 0
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (integer)))

================================================================================
Greater than or equal comparison
================================================================================
amount >= 0
--------------------------------------------------------------------------------
(source_file
  (binary_expression
    left: (identifier)
    right: (integer)))

================================================================================
Regex match
================================================================================
account ~ "Assets"
--------------------------------------------------------------------------------
(source_file
  (regex_expression
    left: (identifier)
    right: (string)))

================================================================================
IN expression single value
================================================================================
account IN ("Assets:Cash")
--------------------------------------------------------------------------------
(source_file
  (in_expression
    left: (identifier)
    (string)))

================================================================================
IN expression multiple values
================================================================================
account IN ("Assets:Cash", "Expenses:Food")
--------------------------------------------------------------------------------
(source_file
  (in_expression
    left: (identifier)
    (string)
    (string)))

================================================================================
Parenthesized expression
================================================================================
(account = "Assets:Cash")
--------------------------------------------------------------------------------
(source_file
  (parenthesized_expression
    (binary_expression
      left: (identifier)
      right: (string))))

================================================================================
NOT unary
================================================================================
NOT account = "Assets:Cash"
--------------------------------------------------------------------------------
(source_file
  (unary_expression
    operand: (binary_expression
      left: (identifier)
      right: (string))))

================================================================================
AND binary
================================================================================
account = "Assets:Cash" AND amount > 0
--------------------------------------------------------------------------------
(source_file
  (and_expression
    left: (binary_expression
      left: (identifier)
      right: (string))
    right: (binary_expression
      left: (identifier)
      right: (integer))))

================================================================================
OR binary
================================================================================
account = "Assets:Cash" OR account = "Expenses:Food"
--------------------------------------------------------------------------------
(source_file
  (or_expression
    left: (binary_expression
      left: (identifier)
      right: (string))
    right: (binary_expression
      left: (identifier)
      right: (string))))

================================================================================
AND binds tighter than OR
================================================================================
a = "x" OR b = "y" AND c = "z"
--------------------------------------------------------------------------------
(source_file
  (or_expression
    left: (binary_expression
      left: (identifier)
      right: (string))
    right: (and_expression
      left: (binary_expression
        left: (identifier)
        right: (string))
      right: (binary_expression
        left: (identifier)
        right: (string)))))

================================================================================
NOT binds tighter than AND
================================================================================
NOT a = "x" AND b = "y"
--------------------------------------------------------------------------------
(source_file
  (and_expression
    left: (unary_expression
      operand: (binary_expression
        left: (identifier)
        right: (string)))
    right: (binary_expression
      left: (identifier)
      right: (string))))

================================================================================
Nested parentheses override precedence
================================================================================
(a = "x" OR b = "y") AND c = "z"
--------------------------------------------------------------------------------
(source_file
  (and_expression
    left: (parenthesized_expression
      (or_expression
        left: (binary_expression
          left: (identifier)
          right: (string))
        right: (binary_expression
          left: (identifier)
          right: (string))))
    right: (binary_expression
      left: (identifier)
      right: (string))))

================================================================================
Function call
================================================================================
SUM(position)
--------------------------------------------------------------------------------
(source_file
  (function_call
    name: (identifier)
    arguments: (identifier)))

================================================================================
Nested function calls
================================================================================
COST(SUM(position))
--------------------------------------------------------------------------------
(source_file
  (function_call
    name: (identifier)
    arguments: (function_call
      name: (identifier)
      arguments: (identifier))))
